<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_image_settings">ImageSettingsActivity</string>
    <string name="advanced_search_options">Advanced Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="enter_site">Enter Site</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>

</resources>
