<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImageSettingsActivity" >

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/advanced_search_options"
        android:textSize="20sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/tvSettingsTitle"
        android:text="@string/image_size"
        android:textSize="22sp" />
    
    <Spinner
        android:id="@+id/spSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvSize" 
        android:layout_alignBottom="@+id/tvSize"
        android:entries="@array/size_array"
        android:gravity="right"/>

	<TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSize"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/tvSize"
        android:text="@string/color_filter"
        android:textSize="22sp" />
    
    <Spinner
        android:id="@+id/spColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvColor" 
        android:layout_alignBottom="@+id/tvColor"
        android:entries="@array/color_array"
        android:gravity="right"/>
    
	<TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvColor"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/tvColor"
        android:text="@string/image_type"
        android:textSize="22sp" />
    
    <Spinner
        android:id="@+id/spType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvType" 
        android:layout_alignBottom="@+id/tvType"
        android:entries="@array/type_array"
        android:gravity="right"/>
    
	<TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvType"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/tvType"
        android:text="@string/site_filter"
        android:textSize="22sp" />

	<EditText
	    android:id="@+id/etSite"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/tvSite" 
        android:layout_alignBottom="@+id/tvSite"
        android:hint="@string/enter_site"
	    android:ems="10" >

	    <requestFocus />
	</EditText>

	<Button
	    android:id="@+id/btnSave"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/etSite"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="26dp"
	    android:onClick="saveSettings"
	    android:text="@string/save" />

</RelativeLayout>
